--- a/blogs/misc/.gitignore
+++ b/blogs/misc/.gitignore
@@ -1,4 +1,4 @@
 #ignore the tmp files when compiling the tex file
-*aux,*log,*out
+*.aux,*.log,*.out
 #ignore the .swp file gernerated by Vim
 *.swp
